--- a/nft-photo/src/component/Header/Header.css
+++ b/nft-photo/src/component/Header/Header.css
@@ -1,14 +1,16 @@
-/* <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/select2.min.css">
-	<link rel="stylesheet" href="css/main.css">
+.networkmodal2 {
+  background-color: #0d151f;
+  text-align: center;
+  border: 4px solid rgba(150, 95, 215, 1);
+  border-radius: 2rem;
+}
 
-	<!-- Favicons -->
-	<link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
-	<link rel="apple-touch-icon" href="icon/favicon-32x32.png">
-
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="Dmitry Volkov"> */
+.headermodalnetwork {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 9px;
+}
+.buttonDisabled {
+  background-color: bisque;
+}
