update pages nft

--- a/newversion/src/pages/Create.css
+++ b/newversion/src/pages/Create.css
@@ -31,5 +31,20 @@ em {
   color: red;
 }
 .uploadFile {
-  color: blue;
+  color: transparent !important;
+}
+.filePhoto {
+  background-color: #222227 !important;
+  border: 1px solid transparent !important;
+  border-radius: 12px !important;
+  height: 46px !important;
+  position: relative !important;
+  color: #fff !important;
+  font-size: 16px !important;
+  width: 100% !important;
+  padding: 0 20px !important;
+  font-family: "Inter", sans-serif !important;
+}
+#file-upload-button {
+  background-color: #222227 !important;
 }
