--- a/newversion/src/component/Header/Header.css
+++ b/newversion/src/component/Header/Header.css
@@ -1,16 +1,59 @@
-.networkmodal2 {
+/* .networkmodal2 {
   background-color: #0d151f;
   text-align: center;
   border: 4px solid rgba(150, 95, 215, 1);
   border-radius: 2rem;
-}
+} */
 
-.headermodalnetwork {
+/* .headermodalnetwork {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 9px;
-}
+} */
 .buttonDisabled {
   background-color: bisque;
+}
+.modalConnectModal {
+  display: block !important;
+  position: fixed !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 400px !important;
+  height: auto !important;
+  margin: 0 !important;
+}
+.modalLoadingContent {
+  position: relative !important;
+  display: flex !important;
+  flex-direction: column !important;
+  width: 100% !important;
+  pointer-events: auto !important;
+  background-color: #16151a !important;
+  background-clip: padding-box !important;
+  border: none !important;
+  border-radius: 0.3rem !important;
+  outline: 0 !important;
+  color: #f5f2fe !important;
+  margin: 0 !important;
+}
+.spanx {
+  color: red;
+  font-size: 60px;
+}
+.headerModal {
+  padding: 0 !important;
+}
+.account {
+  background-color: #222227;
+  border: 1px solid transparent;
+  border-radius: 12px;
+  height: 36px;
+  position: relative;
+  color: #fff;
+  font-size: 14px;
+  width: 100%;
+  padding: 0 20px;
+  font-family: "Inter", sans-serif;
 }
