--- a/newversion/src/pages/Activity.css
+++ b/newversion/src/pages/Activity.css
@@ -1,3 +1,20 @@
 .Activity {
   background-color: #16151a;
 }
+.modalLoadingModal {
+  display: block !important;
+  position: fixed !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 400px !important;
+  height: auto !important;
+  margin: 0 !important;
+}
+.spanx {
+  color: red;
+  font-size: 60px;
+}
+.headerModal {
+  padding: 0 !important;
+}
