--- a/newversion/src/component/Activity/Activitycomponent.css
+++ b/newversion/src/component/Activity/Activitycomponent.css
@@ -1,4 +1,20 @@
-.embedfile {
+.iframe1 {
+  /* position: absolute; */
+  position: relative;
+
+  text-align: "centre";
+  vertical-align: "middle";
+  width: "100%";
+  height: "100%";
+  vertical-align: middle;
+}
+.vid {
+  /* width: 100%; */
   vertical-align: middle;
   border-style: none;
+  width: 100%;
+}
+.shrinkToFit {
+  cursor: zoom-in;
+  width: 100%;
 }
