--- a/newversion/src/component/Item/Itemcontent.css
+++ b/newversion/src/component/Item/Itemcontent.css
@@ -8,7 +8,7 @@
   color: #fff !important;
   padding: 0px 15px !important;
 }
-.imgItem {
+/* .imgItem {
   scroll-behavior: unset;
   width: 100% !important;
   max-width: 100%;
@@ -21,11 +21,10 @@
 .imgItem > html > body {
   width: 100% !important;
   height: 100% !important;
-}
-/* .imgItem > #document > body > img { */
+} */
 
-body {
+/* body {
   width: 100% !important;
   height: 100% !important;
   display: block !important;
-}
+} */
