update project nft

--- a/nft-borders/src/pages/withdrawnft.css
+++ b/nft-borders/src/pages/withdrawnft.css
@@ -1,5 +1,5 @@
 .WithdrawNFT .paraWithdraw{
-    margin: 1% 1%;
+    margin: 2% 2%;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -27,21 +27,32 @@
      
      }
     .labelBack {
-        margin: 5% 4%;
+        margin: 5% 7%;
 
     }
 
 .paraSteps {
   
-  padding: 5% 2%;
+  
 
 }
+.container {  
+    width: 25% !important;
+    height:25% !important; 
+
+    position: relative;
+    }  
+   
 .buttonWithdraw{
    /* Withdraw */
-   width: 25%;
-height:15%;
-left: 604px;
-top: 773px;
+   width: 100% !important;
+    height:100% !important; 
+   margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 
    background: #FFFFFF;
    border: 2px solid #000000;
