--- a/nft-borders/src/pages/desktop.css
+++ b/nft-borders/src/pages/desktop.css
@@ -1,4 +1,4 @@
-.paraWelcome{
+.Desktop .paraWelcome{
 margin: 1% 1%;
 font-family: Roboto;
 font-style: normal;
@@ -10,7 +10,7 @@ line-height: 52px;
 color: #000000;
 
 } 
-.bottle{
+.Desktop .bottle{
 
   
     
@@ -23,7 +23,7 @@ color: #000000;
 
 
 } 
-.paraBottle{
+.Desktop .paraBottle{
 
    
 margin: 10% 2%;
@@ -34,7 +34,7 @@ font-weight: normal;
 font-size: 28px;
 line-height: 33px;
 } 
-.paraActions
+.Desktop .paraActions
 
 {
     margin: 10% 20%;
@@ -45,7 +45,7 @@ font-weight: normal;
 font-size: 28px;
 line-height: 33px;
 } 
-.buttonAction
+.Desktop .buttonAction
 {
 margin: 2% ;
 width: 80%;
@@ -56,11 +56,11 @@ border: 2px solid #000000;
 box-sizing: border-box;
 border-radius: 30.5px;
 }
-.buttonA{
+.Desktop .buttonA{
  
 margin-left:18%;
 height: 50%;}
-.imgbottle{
+.Desktop .imgbottle{
  
 margin:10%;
 width:80%;
@@ -68,12 +68,12 @@ height: 80%;
 }
 
 
-    .action{
+.Desktop .action{
         width: 100%;
         height: 20%;
 
     }
-    .para1837{
+    .Desktop .para1837{
         font-family: Roboto;
 font-style: normal;
 font-weight: normal;
@@ -85,17 +85,17 @@ line-height: 52px;
 color: #000000;
 
     }
-    .paraBottle
+    .Desktop .paraBottle
     {font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
     line-height: 33px;}
-    .paramargin{
+    .Desktop .paramargin{
         margin-top:10%;
 
     }
-    .paraBottleMargin{
+    .Desktop .paraBottleMargin{
        
         padding-top: 10%;
 
