update pages nft

--- a/nft-borders/src/pages/desktop.css
+++ b/nft-borders/src/pages/desktop.css
@@ -14,13 +14,22 @@ color: #000000;
 
   
     
-  margin-left: 15%;
-    
+
+    margin-left: 15%;
     background: #FFFFFF;
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 30.5px;
+    width:85%;
+    height:50%
 
+
+} 
+.Desktop .bottle1{
+
+    width:85%;
+    height:50%;
+    margin-left: 15%;
 
 } 
 .Desktop .paraBottle{
@@ -47,32 +56,59 @@ line-height: 33px;
 } 
 .Desktop .buttonAction
 {
-margin: 2% ;
-width: 80%;
-height: 75px;
+    width:100%;
+    height:80%;
+    
+margin:2% auto;
 
 background: #FFFFFF;
 border: 2px solid #000000;
 box-sizing: border-box;
 border-radius: 30.5px;
 }
+.Desktop .buttonAWithdraw{
+    
+    
+
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 30.5px;
+    width:100%;
+    height:80%;
+    
+}
+.Desktop .buttonActionDeposit{
+    
+    margin:5% auto;
+    width:100%;
+    height:80%;
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 30.5px;
+    
+}
+
 .Desktop .buttonA{
+ width:80%;
+ height: 31%;
  
-margin-left:18%;
-height: 50%;}
+
+}
 .Desktop .imgbottle{
  
 margin:10%;
 width:80%;
-height: 80%;
+height: 65%;
 }
 
 
-.Desktop .action{
+/* .Desktop .action{
         width: 100%;
         height: 20%;
 
-    }
+    } */
     .Desktop .para1837{
         font-family: Roboto;
 font-style: normal;
@@ -93,10 +129,12 @@ color: #000000;
     line-height: 33px;}
     .Desktop .paramargin{
         margin-top:10%;
+    
 
     }
     .Desktop .paraBottleMargin{
        
         padding-top: 10%;
+        cursor:pointer
 
     }
