--- a/nft-borders/src/pages/redeembottle2.css
+++ b/nft-borders/src/pages/redeembottle2.css
@@ -43,8 +43,8 @@
             box-sizing: border-box;
             border-radius: 30.5px;
             border: 1px solid #000000;
-            width: 70%; 
-            height: 70%;
+            width: 100%; 
+            height: 100%;
             background-color: transparent;
             font-family: Roboto;
             font-style: normal;
@@ -53,8 +53,8 @@
             line-height: 33px;
             padding: 4%;
         }
-        .Redeembottle .divButton {
-            width: 20%;
-            margin: 10% auto;
+        .Redeembottle2 .divButton {
+            width: 30%;
+            margin: 1% auto;
             text-align: center;
         }
