update pages nft borders

--- a/nft-borders/src/pages/signup_1.css
+++ b/nft-borders/src/pages/signup_1.css
@@ -5,35 +5,44 @@
     padding: 10px;
     }
 .pageInvitation .title{
-    width: 30%;
+    /* width: 30%;
     margin: auto;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 44px;
-    line-height: 52px;
+    line-height: 52px; */
+    text-align: center;
+   color:#FFFFFF;
+    font-family: "Libre Franklin",sans-serif;
+    margin-bottom: 30px;
+    text-transform: capitalize;
+    margin-top: 2%;
 }
 .pageInvitation .paragraph p{
-    font-family: Roboto;
+    font-family: "Libre Franklin",sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 28px;
+    font-size: 24px;
     line-height: 33px;
     text-align: center;
-    color: #000000;
+    color:#FFFFFF;
 }
-.pageInvitation .input {
+.pageInvitation .divInput {
     width: 50%;
-    margin: auto;
+    height: 100%;
+    margin: 10% auto;
+    
 }
-.pageInvitation .input .inputEmail  {
-    width: 478px;
-    height: 75px;
+.pageInvitation .divInput .inputEmail  {
+    width: 100%;
+   
     background: #FFFFFF;
-    border: 1px solid #000000;
+    border: 1px solid #965fd7;
     box-sizing: border-box;
     border-radius: 30.5px;
     text-align: center;
+   
 }
    
 .pageInvitation .divButton {
@@ -44,10 +53,10 @@
 .pageInvitation .divButton button{
     box-sizing: border-box;
     border-radius: 30.5px;
-    border: 1px solid #000000;
+    border: 1px solid #000;
     width: 100%; 
     height: 100%;
-    background-color: transparent;
+    background-color:#248fff;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
