--- a/nft-borders/src/pages/withdrawnft.css
+++ b/nft-borders/src/pages/withdrawnft.css
@@ -1,6 +1,6 @@
 .WithdrawNFT .paraWithdraw{
     margin: 2% 2%;
-    font-family: Roboto;
+   
     font-style: normal;
     font-weight: normal;
     font-size: 44px;
@@ -8,7 +8,7 @@
     /* identical to box height */
     
     
-    color: #000000;
+    color: #fff;
     } 
 
     .parafont
@@ -16,14 +16,13 @@
         /* < Back */
      
       
-     
-     font-family: Roboto;
+    
      font-style: normal;
      font-weight: normal;
      font-size: 20px;
      line-height: 33px;
      
-     color: #000000;
+     color: #fff;
      
      }
     .labelBack {
@@ -50,7 +49,7 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 
-   background: #FFFFFF;
+  background-color:#248fff;
    border: 2px solid #000000;
    box-sizing: border-box;
    border-radius: 30.5px;
