--- a/nft-borders/src/component/header/header.css
+++ b/nft-borders/src/component/header/header.css
@@ -1,9 +1,16 @@
 .header .logo {
-background-color:#C4C4C4 ;
-width:25%;
-margin:2% 2%;
+/* 
+
+
 height:99px;
-padding: 2% 2%;
+padding: 2% 2%; */
+display: block;
+  /* width: 500px; */
+  width:30%;
+  max-width: 100%;
+  margin:2% 2%;
+  background-color:#0d151f ;
+
 } 
 .paraLogo{
 
