--- a/nft-borders/src/pages/depositnft.css
+++ b/nft-borders/src/pages/depositnft.css
@@ -9,7 +9,7 @@
     /* identical to box height */
     
     
-    color: #000000;   
+    color: #fff;   
 
 }
 
@@ -25,7 +25,7 @@
      font-size: 20px;
      line-height: 33px;
      
-     color: #000000;
+     color: #fff;
      
      }
      .DepositNFT .labelBack {
@@ -49,8 +49,7 @@
       left: 50%;
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-    
-       background: #FFFFFF;
+      background-color:#248fff;
        border: 2px solid #000000;
        box-sizing: border-box;
        border-radius: 30.5px;
