--- a/nft-borders/src/pages/desktop.css
+++ b/nft-borders/src/pages/desktop.css
@@ -1,15 +1,20 @@
+
+
 .Desktop .paraWelcome{
-margin: 1% 1%;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
+
+
+
 font-size: 44px;
-line-height: 52px;
 
 
-color: #000000;
+
+color: #fff;
 
 } 
+.Desktop .content{
+    margin: 2% 2%;
+
+}
 .Desktop .bottle{
 
   
@@ -37,7 +42,7 @@ color: #000000;
    
 margin: 10% 2%;
 
-font-family: Roboto;
+color:#fff;
 font-style: normal;
 font-weight: normal;
 font-size: 28px;
@@ -48,7 +53,7 @@ line-height: 33px;
 {
     margin: 10% 20%;
 
-font-family: Roboto;
+    color:#fff;
 font-style: normal;
 font-weight: normal;
 font-size: 28px;
@@ -61,7 +66,7 @@ line-height: 33px;
     
 margin:2% auto;
 
-background: #FFFFFF;
+background-color:#248fff;
 border: 2px solid #000000;
 box-sizing: border-box;
 border-radius: 30.5px;
@@ -70,7 +75,7 @@ border-radius: 30.5px;
     
     
 
-    background: #FFFFFF;
+    background-color:#248fff;
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 30.5px;
@@ -83,7 +88,7 @@ border-radius: 30.5px;
     margin:5% auto;
     width:100%;
     height:80%;
-    background: #FFFFFF;
+    background-color:#248fff;
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 30.5px;
