--- a/nft-borders/src/pages/redeembottle.css
+++ b/nft-borders/src/pages/redeembottle.css
@@ -1,7 +1,7 @@
 .Redeembottle .paraDeposit{
 
     margin: 2% 2%;
-    font-family: Roboto;
+ 
     font-style: normal;
     font-weight: normal;
     font-size: 44px;
@@ -9,7 +9,7 @@
     /* identical to box height */
     
     
-    color: #000000;   
+    color: #fff;   
 
 }
 
@@ -19,13 +19,13 @@
      
       
      
-     font-family: Roboto;
+    
      font-style: normal;
      font-weight: normal;
      font-size: 20px;
      line-height: 33px;
      
-     color: #000000;
+     color: #fff;
      
      }
      .Redeembottle .labelBack {
@@ -56,6 +56,7 @@
  .Redeembottle   .paraFrom{
   
 text-align: center;
+color:#FFFFFF
   }  
  .Redeembottle .inputform{
   margin:5%;
@@ -90,7 +91,7 @@ height: 100%;
     border: 1px solid #000000;
     width: 100%; 
     height: 100%;
-    background-color: transparent;
+    background-color:#248fff;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
