--- a/nft-borders/src/pages/redeembottle2.css
+++ b/nft-borders/src/pages/redeembottle2.css
@@ -9,7 +9,7 @@
     /* identical to box height */
     
     
-    color: #000000;     
+    color: #fff;     
 
 }
 .Redeembottle2  .parafont
@@ -18,13 +18,13 @@
      
       
      
-     font-family: Roboto;
+
      font-style: normal;
      font-weight: normal;
      font-size: 20px;
      line-height: 33px;
      
-     color: #000000;
+     color: #fff;
      
      }
      .Redeembottle2 .labelBack {
@@ -38,6 +38,7 @@
      .Redeembottle2  .paraFrom{
   
         text-align: center;
+        color:#fff
           } 
           .Redeembottle2  .divButton button{
             box-sizing: border-box;
@@ -45,8 +46,8 @@
             border: 1px solid #000000;
             width: 100%; 
             height: 100%;
-            background-color: transparent;
-            font-family: Roboto;
+            background-color:#248fff;
+           
             font-style: normal;
             font-weight: normal;
             font-size: 28px;
