--- a/nft-borders/src/pages/signup_2.css
+++ b/nft-borders/src/pages/signup_2.css
@@ -7,20 +7,20 @@
 .pageSuccess .title{
     width: 30%;
     margin: auto;
-    font-family: Roboto;
+    color: #FFFFFF;
     font-style: normal;
     font-weight: normal;
     font-size: 44px;
     line-height: 52px;
 }
 .pageSuccess .paragraph p{
-    font-family: Roboto;
+   
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
     line-height: 33px;
     text-align: center;
-    color: #000000;
+    color: #FFF;
 }
 .pageSuccess .input {
     width: 50%;
@@ -52,6 +52,7 @@
     width: 20%;
     margin: 10% auto;
     text-align: center;
+  
 }
 .pageSuccess .divButton button{
     box-sizing: border-box;
@@ -59,8 +60,8 @@
     border: 1px solid #000000;
     width: 100%; 
     height: 100%;
-    background-color: transparent;
-    font-family: Roboto;
+    background-color:#248fff;
+  
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
