--- a/nft-borders/src/pages/withdrawnft_2.css
+++ b/nft-borders/src/pages/withdrawnft_2.css
@@ -8,6 +8,7 @@ margin: 0 auto;
 }
 .WithdrawNFT2 .paraFrom{
     text-align: center;
+    color:#fff
 
 }
 .WithdrawNFT2 .divButton {
@@ -21,8 +22,8 @@ margin: 0 auto;
     border: 1px solid #000000;
     width: 100%; 
     height: 100%;
-    background-color: transparent;
-    font-family: Roboto;
+    background-color:#248fff;
+    
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
