--- a/nft-borders/src/pages/superAdmin.css
+++ b/nft-borders/src/pages/superAdmin.css
@@ -2,6 +2,7 @@
 .custom-line{
     min-height: 5rem;
     margin-bottom: 1rem;
+    cursor: pointer;
    /* background-color: RGBa(60,240,160,0.7); /*Vert*/
    
 }
