--- a/nft-borders/src/pages/updateStatus.css
+++ b/nft-borders/src/pages/updateStatus.css
@@ -10,12 +10,12 @@ line-height: 52px;
 /* identical to box height */
 
 
-color: #000000;
+color: #ffffffff;
 }
 .updateStatus .formUpdate{
     margin: auto;
     width: 80%;
-    border: solid red;
+    
 }
 .updateStatus .input1{
 background: #FFFFFF;
@@ -26,9 +26,30 @@ padding: 2%;
 width: 30%;
 }
 .updateStatus .input2{
+    padding: 2%;
+    margin-top: 2%;
     width: 100%;
     background: #FFFFFF;
 border: 2px solid #000000;
 box-sizing: border-box;
 border-radius: 30.5px;
     }
+.updateStatus .divButton{
+    width: 20%;
+    margin: 10% auto;
+    text-align: center;
+}
+.updateStatus .divButton button{
+    box-sizing: border-box;
+    border-radius: 30.5px;
+    border: 1px solid #000000;
+    width: 100%; 
+    height: 100%;
+    background-color:#248fff;
+    
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 33px;
+    padding: 4%;
+}
