update page redemption and signup add data table

--- a/nft-borders/src/pages/redemption.css
+++ b/nft-borders/src/pages/redemption.css
@@ -12,17 +12,52 @@
     
     color: #ffffffff;
 }
-.redemption .karima {
-    /* 
-    
-    
-    height:99px;
-    padding: 2% 2%; */
+.redemption .divExport {
+    position: relative;
+    float:right;
     display: block;
       /* width: 500px; */
-      width:30%;
+      text-align: right;
       max-width: 100%;
-      margin:2% 2%;
+      margin-top: -1%;
       background-color:#0d151f ;
     
     } 
+
+    .redemption .divExport .styleExport{
+    font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 28px;
+line-height: 33px;
+text-align: center;
+margin-top: 27%;
+color: #ffffff;
+}
+.redemption .divExport .styleLogo{
+
+}
+.redemption .buttonActive{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 30.5px;
+    padding: 1%;
+    font-size: 25px;
+    justify-content: space-between;
+}
+.redemption .buttonRedeemed{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 30.5px; 
+    padding: 1%;
+    font-size: 25px;
+}
+.redemption .RadioButton{
+    margin: 16px 0;
+
+
+
+    
+}
