--- a/nft-borders/src/component/tables/dataTableRedeem.css
+++ b/nft-borders/src/component/tables/dataTableRedeem.css
@@ -126,3 +126,27 @@
   margin-bottom: 10px;
   margin-top: 40px;
 }
+.DataTablePage .sendButton{
+  background: #FFFFFF;
+border: 1.25926px solid #000000;
+box-sizing: border-box;
+border-radius: 12.5926px;
+
+    width: 18%;
+    font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 15.1111px;
+line-height: 18px;
+}
+.DataTablePage .completeButton{
+  background: #FFFFFF !important;
+border: 1.25926px solid #000000 !important;
+box-sizing: border-box;
+border-radius: 12.5926px;
+font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 15.1111px;
+line-height: 18px;
+}
