--- a/nft-borders/src/component/header/header.css
+++ b/nft-borders/src/component/header/header.css
@@ -29,3 +29,11 @@ display: block;
     border-radius: 30.5px;
 
 } 
+.header .btnconnectwalletaccount{
+  background: transparent;
+  color: white;
+  border: 2px solid rgba(150, 95, 215, 1);
+  border-radius: 7px;
+  font-size: 17px;
+max-width: 30%;
+}
