--- a/nft-borders/src/pages/updateStatus.css
+++ b/nft-borders/src/pages/updateStatus.css
@@ -53,3 +53,22 @@ border-radius: 30.5px;
     line-height: 33px;
     padding: 4%;
 }
+.updateStatus .divButtonDisable{
+    width: 20%;
+    margin: 10% auto;
+    text-align: center;
+}
+.updateStatus .divButtonDisable button{
+    box-sizing: border-box;
+    border-radius: 30.5px;
+    border: 1px solid #000000;
+    width: 100%; 
+    height: 100%;
+    background-color:#acb9c7;
+    
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 33px;
+    padding: 4%;
+}
