--- a/nft-borders/src/component/header/header.css
+++ b/nft-borders/src/component/header/header.css
@@ -12,21 +12,21 @@ display: block;
   background-color:#0d151f ;
 
 } 
-.paraLogo{
+.header .paraLogo{
 
     text-align: center;
 } 
-.buttonConnect{
+.header .buttonConnect{
     position: absolute;
     width: 25%;
     height: 61px;
     left: 72%;
     top: 6%;
-    
     background: #FFFFFF;
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 30.5px;
+    color: black;
 
 } 
 .header .btnconnectwalletaccount{
