--- a/nft-borders/src/pages/desktop.css
+++ b/nft-borders/src/pages/desktop.css
@@ -25,8 +25,8 @@ color: #fff;
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 30.5px;
-    width:85%;
-    height:50%
+    /* width:85%;
+    height:50% */
 
 
 } 
@@ -138,8 +138,18 @@ color: #000000;
 
     }
     .Desktop .paraBottleMargin{
-       
+       position: relative;
         padding-top: 10%;
         cursor:pointer
 
     }
+    .modalLoadingModal {
+        display: block !important;
+        position: fixed !important;
+        top: 50% !important;
+        left: 50% !important;
+        transform: translate(-50%, -50%) !important;
+        width: 400px !important;
+        height: auto !important;
+        margin: 0 !important;
+      }
