--- a/nft-borders/src/pages/progressupdate.css
+++ b/nft-borders/src/pages/progressupdate.css
@@ -9,7 +9,7 @@
       /* identical to box height */
       
       
-      color: #000000;     
+      color: #ffff;     
   
   }
   .progressUpdate  .parafont
@@ -24,7 +24,7 @@
      font-size: 20px;
      line-height: 33px;
      
-     color: #000000;
+     color: #ffff;
      margin: auto 2%;
     }
      
