--- a/nft-borders/src/component/modals/ModalWaiting/ModalWaiting.css
+++ b/nft-borders/src/component/modals/ModalWaiting/ModalWaiting.css
@@ -20,3 +20,11 @@
     color: var(--text_color);
     margin: 25px 0;
   }
+
+
+  .ModalNetworkNotSupported{
+    height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
