--- a/nft-borders/src/pages/withdrawnft.css
+++ b/nft-borders/src/pages/withdrawnft.css
@@ -11,7 +11,7 @@
     color: #fff;
     } 
 
-    .parafont
+    .WithdrawNFT  .parafont
     {
         /* < Back */
      
@@ -25,20 +25,20 @@
      color: #fff;
      
      }
-    .labelBack {
+     .WithdrawNFT .labelBack {
         margin: 5% 7%;
 
     }
 
 
-.container {  
+    .WithdrawNFT .container {  
     width: 25% !important;
     height:25% !important; 
 
     position: relative;
     }  
    
-.buttonWithdraw{
+    .WithdrawNFT .buttonWithdraw{
    /* Withdraw */
    width: 100% !important;
     height:100% !important; 
