--- a/nft-borders/src/pages/desktop.css
+++ b/nft-borders/src/pages/desktop.css
@@ -1,155 +1,12 @@
 
 
+.Desktop .bottleCardContainer{
+    margin-bottom: 25px;
+}
 .Desktop .paraWelcome{
-
-
-
-font-size: 44px;
-
-
-
-color: #fff;
-
-} 
-.Desktop .content{
-    margin: 2% 2%;
-
+    color:#fff
 }
-.Desktop .bottle{
-
-  
-    
-
-    margin-left: 15%;
-    background: #FFFFFF;
-    border: 2px solid #000000;
-    box-sizing: border-box;
-    border-radius: 30.5px;
-    /* width:85%;
-    height:50% */
-
-
-} 
-.Desktop .bottle1{
-
-    width:85%;
-    height:50%;
-    margin-left: 15%;
-
-} 
-.Desktop .paraBottle{
-
-   
-margin: 10% 2%;
-
-color:#fff;
-font-style: normal;
-font-weight: normal;
-font-size: 28px;
-line-height: 33px;
-} 
-.Desktop .paraActions
-
-{
-    margin: 10% 20%;
-
+.Desktop .title{
     color:#fff;
-font-style: normal;
-font-weight: normal;
-font-size: 28px;
-line-height: 33px;
-} 
-.Desktop .buttonAction
-{
-    width:100%;
-    height:80%;
-    
-margin:2% auto;
-
-background-color:#248fff;
-border: 2px solid #000000;
-box-sizing: border-box;
-border-radius: 30.5px;
+    margin-bottom: 20px;
 }
-.Desktop .buttonAWithdraw{
-    
-    
-
-    background-color:#248fff;
-    border: 2px solid #000000;
-    box-sizing: border-box;
-    border-radius: 30.5px;
-    width:100%;
-    height:80%;
-    
-}
-.Desktop .buttonActionDeposit{
-    
-    margin:5% auto;
-    width:100%;
-    height:80%;
-    background-color:#248fff;
-    border: 2px solid #000000;
-    box-sizing: border-box;
-    border-radius: 30.5px;
-    
-}
-
-.Desktop .buttonA{
- width:80%;
- height: 31%;
- 
-
-}
-.Desktop .imgbottle{
- 
-margin:10%;
-width:80%;
-height: 65%;
-}
-
-
-/* .Desktop .action{
-        width: 100%;
-        height: 20%;
-
-    } */
-    .Desktop .para1837{
-        font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 44px;
-line-height: 52px;
-/* identical to box height */
-
-
-color: #000000;
-
-    }
-    .Desktop .paraBottle
-    {font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 33px;}
-    .Desktop .paramargin{
-        margin-top:10%;
-    
-
-    }
-    .Desktop .paraBottleMargin{
-       position: relative;
-        padding-top: 10%;
-        cursor:pointer
-
-    }
-    .modalLoadingModal {
-        display: block !important;
-        position: fixed !important;
-        top: 50% !important;
-        left: 50% !important;
-        transform: translate(-50%, -50%) !important;
-        width: 400px !important;
-        height: auto !important;
-        margin: 0 !important;
-      }
