update base and update email backoffce fixed new table userInfo

--- a/nft-borders/src/component/modals/ModalWaiting/ModalWaiting.css
+++ b/nft-borders/src/component/modals/ModalWaiting/ModalWaiting.css
@@ -5,26 +5,34 @@
     font-size: 18px;
     color: var(--gray_color);
     cursor: pointer;
-  }
-  
-  .ModalWaiting .modalTitle {
+}
+
+.ModalWaiting .modalTitle {
     font-size: 19px;
     text-align: center;
     font-weight: 500;
     margin-bottom: 30px;
-  }
-  
-  .ModalWaiting .message {
+}
+
+.ModalWaiting .message {
     font-size: 19px;
     text-align: center;
     color: var(--text_color);
     margin: 25px 0;
-  }
+}
 
-
-  .ModalNetworkNotSupported{
+.ModalNetworkNotSupported {
     height: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
+
+div.modal-content {
+    background: none;
+}
+
+.btn-primary:disabled,
+.btn-primary.disabled {
+    font-size: xxx-large;
+}
