--- a/nft-borders/src/pages/desktop.css
+++ b/nft-borders/src/pages/desktop.css
@@ -1,12 +1,17 @@
-
-
-.Desktop .bottleCardContainer{
+.Desktop .bottleCardContainer {
     margin-bottom: 25px;
 }
-.Desktop .paraWelcome{
-    color:#fff
+
+.Desktop .paraWelcome {
+    color: #fff
 }
-.Desktop .title{
-    color:#fff;
+
+.Desktop .title {
+    color: #fff;
     margin-bottom: 20px;
+}
+
+.Desktop .styleName {
+    font-size: xx-large;
+    color: cadetblue;
 }
