added fucntion logout and update web3 , modal

--- a/nft-borders/src/component/modals/ModalWaiting/ModalWaiting.css
+++ b/nft-borders/src/component/modals/ModalWaiting/ModalWaiting.css
@@ -24,15 +24,28 @@
 .ModalNetworkNotSupported {
     height: 250px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-div.modal-content {
-    background: none;
 }
 
 .btn-primary:disabled,
 .btn-primary.disabled {
     font-size: xxx-large;
+}
+
+.loadingModal {
+    width: 300px;
+    height: 250px;
+}
+
+.class1 .loadingStyle {
+    margin-top: 13px;
+    font-size: 20px;
+}
+
+.class1 .spinnerClass {
+    color: blue !important;
+    width: 35px !important;
+    height: 35px !important;
 }
