--- a/nft-borders/src/pages/redeembottle.css
+++ b/nft-borders/src/pages/redeembottle.css
@@ -1,97 +1,80 @@
-.Redeembottle .paraDeposit{
-
+.Redeembottle .paraDeposit {
     margin: 2% 2%;
- 
     font-style: normal;
     font-weight: normal;
     font-size: 44px;
     line-height: 52px;
     /* identical to box height */
-    
-    
-    color: #fff;   
-
+    color: #fff;
 }
 
-.Redeembottle  .parafont
-    {
-        /* < Back */
-     
-      
-     
-    
-     font-style: normal;
-     font-weight: normal;
-     font-size: 20px;
-     line-height: 33px;
-     
-     color: #fff;
-     
-     }
-     .Redeembottle .labelBack {
-        margin: auto 2%;
+.Redeembottle .parafont {
+    /* < Back */
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 33px;
+    color: #fff;
+}
 
-    }
-    .Redeembottle  .container {  
-        width: 25% !important;
-        height:25% !important; 
-    
-      
-        }  
+.Redeembottle .labelBack {
+    margin: auto 2%;
+}
 
-       
-        .Redeembottle  .buttonDeposit{
-            display: block;
-            margin : auto;
-       background: #FFFFFF;
-       border: 2px solid #000000;
-       box-sizing: border-box;
-       border-radius: 30.5px;
-    
-    
-    
-    }
-  
+.Redeembottle .container {
+    width: 25% !important;
+    height: 25% !important;
+}
 
- .Redeembottle   .paraFrom{
-  
-text-align: center;
-color:#FFFFFF
-  }  
- .Redeembottle .inputform{
-  margin:5%;
-   background: #FFFFFF;
-border: 2px solid #000000;
-box-sizing: border-box;
-border-radius: 30.5px;
-width:70%;
-height: 100%;
+.Redeembottle .buttonDeposit {
+    display: block;
+    margin: auto;
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 30.5px;
+}
 
+.Redeembottle .paraFrom {
+    text-align: center;
+    color: #FFFFFF
+}
 
-       
-  }
-  .Redeembottle    .divInput{
-      width:70%;
-      margin-left: 10%;
-      margin-right: 10%;
-   }
-   .Redeembottle .divButton {
+.Redeembottle .inputform {
+    margin: 5%;
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 30.5px;
+    width: 70%;
+    padding: 20px;
+}
+
+.Redeembottle .divInput {
+    width: 70%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.Redeembottle .divButton {
     width: 20%;
     margin: 10% auto;
     text-align: center;
 }
-.Redeembottle .divForm{
+
+.Redeembottle .divForm {
     width: 100%;
     margin: 3% 2%;
     text-align: center;
 }
-.Redeembottle  .divButton button{
+
+.Redeembottle .divButton button {
     box-sizing: border-box;
     border-radius: 30.5px;
     border: 1px solid #000000;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    background-color:#248fff;
+    background-color: #248fff;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -99,6 +82,7 @@ height: 100%;
     line-height: 33px;
     padding: 4%;
 }
+
 .Redeembottle input::placeholder {
     text-align: center;
     font-family: Roboto;
@@ -106,6 +90,5 @@ height: 100%;
     font-weight: normal;
     font-size: 20px;
     line-height: 33px;
-    
     color: #8E8E8E;
-  }
+}
