--- a/nft-borders/src/component/header/header.css
+++ b/nft-borders/src/component/header/header.css
@@ -1,22 +1,23 @@
 .header .logo {
-/* 
+    /* 
 
 
 height:99px;
 padding: 2% 2%; */
-display: block;
-  /* width: 500px; */
-  width:30%;
-  max-width: 100%;
-  margin:2% 2%;
-  background-color:#0d151f ;
+    display: block;
+    /* width: 500px; */
+    width: 30%;
+    max-width: 100%;
+    margin: 2% 2%;
+    background-color: #0d151f;
+}
 
-} 
-.header .paraLogo{
-
+.header .paraLogo {
     text-align: center;
-} 
-.header .buttonConnect{
+}
+
+.header .buttonConnect {
+    flex-direction: row;
     position: absolute;
     width: 25%;
     height: 61px;
@@ -27,13 +28,20 @@ display: block;
     box-sizing: border-box;
     border-radius: 30.5px;
     color: black;
+    display: flex;
+    justify-content: space-around;
+}
 
-} 
-.header .btnconnectwalletaccount{
-  background: transparent;
-  color: white;
-  border: 2px solid rgba(150, 95, 215, 1);
-  border-radius: 7px;
-  font-size: 17px;
-max-width: 30%;
+.header .btnconnectwalletaccount {
+    background: transparent;
+    color: white;
+    border: 2px solid rgba(150, 95, 215, 1);
+    border-radius: 7px;
+    font-size: 17px;
+    max-width: 30%;
+}
+
+.header .buttonConnect .account {
+    background: none;
+    border: none;
 }
