update page create nft

--- a/newversion/src/pages/Create.css
+++ b/newversion/src/pages/Create.css
@@ -17,16 +17,7 @@
   margin: 15px auto;
 }
 
-.modalLoadingModal {
-  display: block !important;
-  position: fixed !important;
-  top: 50% !important;
-  left: 50% !important;
-  transform: translate(-50%, -50%) !important;
-  width: 400px !important;
-  height: auto !important;
-  margin: 0 !important;
-}
+
 .ajouter {
   margin-top: 20px !important;
 }
@@ -50,4 +41,52 @@ em {
 }
 #file-upload-button {
   background-color: #222227 !important;
+}
+.modalLoadingModal {
+background: none;
+}
+
+.btn-primary:disabled,
+.btn-primary.disabled {
+  font-size: xxx-large;
+}
+.class1 {
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.ModalNetworkNotSupported {
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-primary:disabled,
+.btn-primary.disabled {
+  font-size: xxx-large;
+}
+
+.loadingModal {
+  width: 300px;
+  height: 250px;
+}
+
+.class1 .loadingStyle {
+  margin-top: 13px;
+  font-size: 20px;
+}
+
+.class1 .spinnerClass {
+  color: blue !important;
+  width: 35px !important;
+  height: 35px !important;
+}
+.class1 .modal-content{
+align-items: center;
+padding: 2%;
 }
